--- a/app/views/users/sign_in.html.erb
+++ b/app/views/users/sign_in.html.erb
@@ -12,8 +12,8 @@
         <button>サインインする</button>
       <% end %>
     </div>
-    <div class="sign_in_link">
-      <p>アカウントをお持ちですか？<%= link_to sign_up_path do %>新規登録<% end %></p>
-    </div>
+    <!--<div class="sign_in_link">-->
+    <!--  <p>アカウントをお持ちですか？新規登録</p>-->
+    <!--</div>-->
   </div>
 </div>
