--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -7,12 +7,6 @@
 <section class="smoll_title">
 
 <h2>総合得点別ランキング</h2>
-<%= form_tag("/movies/next", method: :post) do |f| %>
-    <%= hidden_field_tag :page, @page %>
-    <%= hidden_field_tag :page_story, @page_story %>
-    <%= hidden_field_tag :page_comedy, @page_comedy %>
-    <%= hidden_field_tag :page_emotion, @page_emotion %>
-    <%= hidden_field_tag :page_fiction, @page_fiction %>
     <ul class="title">
         <% @movies.each do |m| %>
         <li>
@@ -26,44 +20,52 @@
         </li>
        <% end %>
     </ul>
-    <%= submit_tag "次へ" %>
+<% if @page > 0 %>
+    <%= form_tag("/movies/prev", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "前へ" %>
+    <% end %>
+<% end %>
+<% if @page < 1 %>
+    <%= form_tag("/movies/next", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "次へ" %>
+    <% end %>
 <% end %>
 </section>
     
     
 <section class="smoll_title">
 <h2>ストーリーランキング</h2>
-<%= form_tag("/movies/next2", method: :post) do |f| %>
-    <%= hidden_field_tag :page, @page %>
-    <%= hidden_field_tag :page_story, @page_story %>
-    <%= hidden_field_tag :page_comedy, @page_comedy %>
-    <%= hidden_field_tag :page_emotion, @page_emotion %>
-    <%= hidden_field_tag :page_fiction, @page_fiction %>
-        <ul class="title">
-            <% @movies_story.each do |m| %>
-            <li>
-            <%= link_to movie_path(m.id) do %>
-                <div><%= image_tag image_url(m) %></div>
-                <div>名前：<%= m.title %></div>
-            <%= link_to like_path(m) do %>
-              <i class="fa fa-heart active"><%= movie_like_count(m) %></i>
-            <% end %>
-            <% end %>
-            </li>
-           <% end %>
-        </ul>
-    <%= submit_tag "次へ" %>
+    <ul class="title">
+        <% @movies_story.each do |m| %>
+        <li>
+        <%= link_to movie_path(m.id) do %>
+            <div><%= image_tag image_url(m) %></div>
+            <div>名前：<%= m.title %></div>
+        <%= link_to like_path(m) do %>
+          <i class="fa fa-heart active"><%= movie_like_count(m) %></i>
+        <% end %>
+        <% end %>
+        </li>
+       <% end %>
+    </ul>
+<% if @page_story > 0 %>
+    <%= form_tag("/movies/prev2", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "前へ" %>
+    <% end %>
+<% end %>
+<% if @page_story < 1 %>
+    <%= form_tag("/movies/next2", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "次へ" %>
+    <% end %>
 <% end %>
 </section>
 
 <section class="smoll_title">
 <h2>笑いランキング</h2>
-<%= form_tag("/movies/next3", method: :post) do |f| %>
-    <%= hidden_field_tag :page, @page %>
-    <%= hidden_field_tag :page_story, @page_story %>
-    <%= hidden_field_tag :page_comedy, @page_comedy %>
-    <%= hidden_field_tag :page_emotion, @page_emotion %>
-    <%= hidden_field_tag :page_fiction, @page_fiction %>
     <ul class="title">
         <% @movies_comedy.each do |m| %>
         <li>
@@ -77,18 +79,22 @@
         </li>
        <% end %>
     </ul>
-    <%= submit_tag "次へ" %>
+<% if @page_comedy > 0 %>
+    <%= form_tag("/movies/prev3", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "前へ" %>
+    <% end %>
+<% end %>
+<% if @page_comedy < 1 %>
+    <%= form_tag("/movies/next3", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "次へ" %>
+    <% end %>
 <% end %>
 </section>
 
 <section class="smoll_title">
 <h2>感動ランキング</h2>
-<%= form_tag("/movies/next4", method: :post) do |f| %>
-    <%= hidden_field_tag :page, @page %>
-    <%= hidden_field_tag :page_story, @page_story %>
-    <%= hidden_field_tag :page_comedy, @page_comedy %>
-    <%= hidden_field_tag :page_emotion, @page_emotion %>
-    <%= hidden_field_tag :page_fiction, @page_fiction %>
     <ul class="title">
         <% @movies_emotion.each do |m| %>
         <li>
@@ -102,18 +108,22 @@
         </li>
        <% end %>
     </ul>
-    <%= submit_tag "次へ" %>
+<% if @page_emotion > 0 %>
+    <%= form_tag("/movies/prev4", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "前へ" %>
+    <% end %>
+<% end %>
+<% if @page_emotion < 1 %>
+    <%= form_tag("/movies/next4", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "次へ" %>
+    <% end %>
 <% end %>
 </section>
 
 <section class="smoll_title">
 <h2>ノンフィクションランキング</h2>
-<%= form_tag("/movies/next5", method: :post) do |f| %>
-    <%= hidden_field_tag :page, @page %>
-    <%= hidden_field_tag :page_story, @page_story %>
-    <%= hidden_field_tag :page_comedy, @page_comedy %>
-    <%= hidden_field_tag :page_emotion, @page_emotion %>
-    <%= hidden_field_tag :page_fiction, @page_fiction %>
     <ul class="title">
         <% @movies_fiction.each do |m| %>
         <li>
@@ -127,7 +137,17 @@
         </li>
        <% end %>
     </ul>
-    <%= submit_tag "次へ" %>
+<% if @page_fiction > 0 %>
+    <%= form_tag("/movies/prev5", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "前へ" %>
+    <% end %>
+<% end %>
+<% if @page_fiction < 1 %>
+    <%= form_tag("/movies/next5", method: :post) do %>
+        <%= render partial: 'movies/hidden' %>
+        <%= submit_tag "次へ" %>
+    <% end %>
 <% end %>
 </section>
 </div>
